@@ -1,4 +1,5 @@
 
+* Added methods addAcl and delAcl
 * putPage and appendPage can read from stdin
 * Added method logoff
 
